crates/toml/tests/snapshots/invalid/array/no-close-table-03.stderr
TOML parse error at line 1, column 28
  |
1 | no-close-table-03 = [1,{a=1]
  |                            ^
invalid inline table element, expected `,`

---
TOML parse error at line 1, column 29
  |
1 | no-close-table-03 = [1,{a=1]
  |                             ^
unclosed inline table, expected `}`

---
TOML parse error at line 1, column 29
  |
1 | no-close-table-03 = [1,{a=1]
  |                             ^
unclosed array, expected `]`
